# autoware_vision_pilot

./: .gitignore  README.md
Models/: README.md
Models/data_parsing/AutoDrive/OpenLane/: README.md  converter.py  test_conversion.py
Models/data_utils/: load_data_auto_drive.py
Models/exports/: convert_pytorch_to_onnx.py
Models/inference/: auto_drive_infer.py
Models/model_components/auto_drive/: auto_drive_backbone.py  auto_drive_head.py  auto_drive_layers.py  auto_drive_neck.py  auto_drive_network.py
Models/model_library/AutoSteer/: README.md
Models/training/: auto_drive_trainer.py
Models/visualizations/AutoDrive/: image_visualization.py  video_visualization.py
VisionPilot/Middleware_Recipes/ROS2/VisionPilot_0.5/: visionpilot.conf
VisionPilot/Production_Releases/: README.md
VisionPilot/Production_Releases/0.9/: CMakeLists.txt  main.cpp
VisionPilot/Production_Releases/0.9/include/config/: config_reader.hpp
VisionPilot/Production_Releases/0.9/include/inference/autospeed/: tensorrt_engine.hpp
VisionPilot/Production_Releases/0.9/include/speed_planning/: speed_planning.hpp
VisionPilot/Production_Releases/0.9/include/tracking/: cipo_history.hpp  cipo_utils.hpp  feature_matching_utils.hpp  logging.hpp  object_finder.hpp  tracking_utils.hpp
VisionPilot/Production_Releases/0.9/include/visualization/: visualize.hpp  visualize_long.hpp
VisionPilot/Production_Releases/0.9/src/config/: config_reader.cpp
VisionPilot/Production_Releases/0.9/src/speed_planning/: speed_planning.cpp
VisionPilot/Production_Releases/0.9/src/tracking/: cipo_history.cpp  cipo_utils.cpp  feature_matching_utils.cpp  kalman_filter.cpp  object_finder.cpp  tracking_utils.cpp
VisionPilot/Production_Releases/0.9/src/visualization/: visualize.cpp  visualize_long.cpp
VisionPilot/Simulation/CARLA/ROS2/src/camera_publisher/camera_publisher/: camera_publisher_node.py
VisionPilot/development_releases/1.0/: CMakeLists.txt
VisionPilot/development_releases/1.0/app/: CMakeLists.txt  VisionPilot.cpp
VisionPilot/development_releases/1.0/modules/can_reader/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/can_reader/include/can_reader/: can_reader.hpp
VisionPilot/development_releases/1.0/modules/can_reader/src/: can_reader.cpp
VisionPilot/development_releases/1.0/modules/can_writer/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/can_writer/include/can_writer/: can_writer.hpp
VisionPilot/development_releases/1.0/modules/can_writer/src/: can_writer.cpp
VisionPilot/development_releases/1.0/modules/inference/autodrive/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/inference/autodrive/include/autodrive/: autodrive.hpp
VisionPilot/development_releases/1.0/modules/inference/autodrive/src/: autodrive.cpp
VisionPilot/development_releases/1.0/modules/inference/autospeed/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/inference/autospeed/include/autospeed/: autospeed.hpp
VisionPilot/development_releases/1.0/modules/inference/autospeed/src/: autospeed.cpp
VisionPilot/development_releases/1.0/modules/inference/autosteer/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/inference/autosteer/include/autosteer/: autosteer.hpp
VisionPilot/development_releases/1.0/modules/inference/autosteer/src/: autosteer.cpp
VisionPilot/development_releases/1.0/modules/inference/trt_engine/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/inference/trt_engine/include/trt_engine/: trt_engine.hpp
VisionPilot/development_releases/1.0/modules/inference/trt_engine/src/: trt_engine.cpp
VisionPilot/development_releases/1.0/modules/input_rtsp_stream/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/input_rtsp_stream/include/input_rtsp_stream/: input_rtsp_stream.hpp
VisionPilot/development_releases/1.0/modules/input_rtsp_stream/src/: input_rtsp_stream.cpp
VisionPilot/development_releases/1.0/modules/output_rtsp_stream/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/output_rtsp_stream/include/output_rtsp_stream/: output_rtsp_stream.hpp
VisionPilot/development_releases/1.0/modules/output_rtsp_stream/src/: output_rtsp_stream.cpp
VisionPilot/development_releases/1.0/modules/visualization/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/visualization/include/visualization/: visualization.hpp
VisionPilot/development_releases/longitudinal_pipeline/: CMakeLists.txt  VisionPilot.conf.example  main.cpp  visionpilot.conf
VisionPilot/development_releases/longitudinal_pipeline/include/inference/autospeed/: onnxruntime_engine.hpp
VisionPilot/development_releases/longitudinal_pipeline/include/longitudinal/: pi_controller.hpp
VisionPilot/development_releases/longitudinal_pipeline/include/object_tracking/: object_tracking.hpp
VisionPilot/development_releases/longitudinal_pipeline/include/publisher/: visionpilot_shared_state.hpp
VisionPilot/development_releases/longitudinal_pipeline/include/speed_planning/: speed_planning.hpp
VisionPilot/development_releases/longitudinal_pipeline/include/tracking/: object_finder.hpp
VisionPilot/development_releases/longitudinal_pipeline/include/visualization/: visualize.hpp
VisionPilot/development_releases/longitudinal_pipeline/src/config/: config_reader.cpp
VisionPilot/development_releases/longitudinal_pipeline/src/inference/autospeed/: onnxruntime_engine.cpp  onnxruntime_session.cpp
VisionPilot/development_releases/longitudinal_pipeline/src/longitudinal/: pi_controller.cpp
VisionPilot/development_releases/longitudinal_pipeline/src/object_tracking/: object_tracking.cpp
VisionPilot/development_releases/longitudinal_pipeline/src/publisher/: visionpilot_shared_state.cpp
VisionPilot/development_releases/longitudinal_pipeline/src/speed_planning/: speed_planning.cpp
VisionPilot/development_releases/longitudinal_pipeline/src/tracking/: cipo_history.cpp  object_finder.cpp
VisionPilot/development_releases/longitudinal_pipeline/src/visualization/: visualize.cpp
(+3 files in other folders)
